--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noUnusedParameters": true, // Report errors on unused parameters
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["node_modules", "build"] // *** The files to not type check ***
 }
