--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "plantilla-react",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "5.16.4",
-    "@testing-library/react": "13.2.0",
     "@testing-library/user-event": "13.5.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.36",
@@ -41,10 +40,12 @@
     ]
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.27.0",
-    "@typescript-eslint/parser": "^5.27.0",
-    "eslint": "^8.16.0",
-    "eslint-plugin-react": "^7.30.0",
-    "prettier": "2.6.2"
+    "@testing-library/react": "13.3.0",
+    "@typescript-eslint/eslint-plugin": "5.27.1",
+    "@typescript-eslint/parser": "5.27.1",
+    "eslint": "8.17.0",
+    "eslint-plugin-react": "7.30.0",
+    "prettier": "2.6.2",
+    "react-test-renderer": "18.1.0"
   }
 }
