--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+    "root": true,
     "env": {
         "browser": true,
         "es2021": true,
@@ -9,7 +10,8 @@
         "plugin:react/recommended",
         "plugin:react/jsx-runtime",
         "plugin:@typescript-eslint/recommended",
-        "plugin:jsx-a11y/recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:jsx-a11y/recommended", 
         "prettier"
     ],
     "parser": "@typescript-eslint/parser",
@@ -23,16 +25,18 @@
     "plugins": [
         "react",
         "eslint-plugin-react-hooks",
-        "prettier",
+        // "eslint-plugin-prettier",
         "jsx-a11y",
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "prettier"
     ],
     "rules": {
         "no-undef": 0,
         "curly": "error",
+        "no-console": 1,
         "react/prop-types": 0,
         "semi": ["error", "always"],
-        "prettier/prettier": "warn",
+        "prettier/prettier": "error",
         "no-inline-comments": "error",
         "react-hooks/exhaustive-deps": 0,
         "no-unused-vars": ["error", { "varsIgnorePattern": "_.*" }],
