--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,7 @@
     "jsxSingleQuote": false,
     "semi": true,
     "trailingComma": "es5",
-    "singleQuote": false,
-    "tabWidth": 4
+    "singleQuote": true,
+    "tabWidth": 4,
+    "printWidth": 80
 }
