--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-scripts": "5.0.1",
@@ -55,5 +56,11 @@
     "onchange": "^7.1.0",
     "prettier": "2.6.2",
     "react-test-renderer": "18.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier-format && npm run lint",
+      "pre-push": ""
+    }
   }
 }
