--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-scripts": "5.0.1",
+    "ts-jest": "^28.0.4",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
@@ -59,8 +60,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run prettier-format && npm run lint",
-      "pre-push": ""
+      "pre-commit": "npm run prettier-format && npm run lint"
     }
   }
 }
