--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
-    "prettier-watch": "onchange 'src/**/*.ts' -- prettier --write {{changed}}",
-    "lint": "eslint . --ext .ts",
-    "lint-and-fix": "eslint . --ext .ts --fix",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.{ts,js,tsx}' --write",
+    "prettier-watch": "onchange 'src/**/*.{ts,js,tsx}' -- prettier --write {{changed}}",
+    "lint": "eslint . --ext .ts,.js,.tsx --no-error-on-unmatched-pattern",
+    "lint-and-fix": "eslint . --ext .ts,.js,.tsx --fix --no-error-on-unmatched-pattern",
     "prepare": "husky install"
   },
   "eslintConfig": {
@@ -53,7 +53,6 @@
     "@typescript-eslint/parser": "5.27.1",
     "eslint": "8.17.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-react": "7.30.0",
     "husky": "^8.0.1",
     "onchange": "^7.1.0",
     "prettier": "2.6.2",
