--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@testing-library/dom": "7.21.4",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/user-event": "13.5.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.11.36",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
+    "axios": "^0.27.2",
     "eslint-plugin-prettier": "^4.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
