--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,8 @@
         "eslint-plugin-react-hooks",
         "jsx-a11y",
         "@typescript-eslint",
-        "prettier"
+        "prettier",
+        "eslint-plugin-react"
     ],
     "rules": {
         "no-undef": 0,
