--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.4",
+    "@reduxjs/toolkit": "^1.8.2",
     "@testing-library/dom": "7.21.4",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/user-event": "13.5.0",
@@ -12,9 +13,14 @@
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "axios": "^0.27.2",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "react": "17.0.0",
+    "react-dom": "17.0.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "ts-jest": "^28.0.4",
     "typescript": "^4.7.2",
